infra/k8s/admin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec:
      containers:
      - name: admin-api
        image: library/admin-api:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api
spec:
  selector:
    app: admin-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
